# reowolf

./: .gitignore  Cargo.toml  LICENSE  README.md  add-Cargo.lock.patch  cbindgen.toml  flake.nix  language_spec.md  notes_max.md  pseudo_socket.h  reowolf.h
docs/types/: infinite_types.md
examples/: 6_amy_log.txt  README.md  cpy_dll.sh  cpy_so.sh  eg_protocols.pdl  make.py  utility.c  zoop.sh
examples/1_minimal/: amy.c  reowolf.h
examples/2_runtime_pdl/: amy.c
examples/3_trivial_connect/: amy.c
examples/4_port_pair/: amy.c
examples/5_put_get/: amy.c
examples/6_atomic/: amy.c
examples/7_recovery/: amy.c
examples/8_net_ports/: amy.c
examples/9_net_self_putget/: amy.c  make.sh
examples/a_swap/: amy.c  bob.c
examples/bench_02/: main.c
examples/bench_03/: main.c
examples/bench_04/: main.c
examples/bench_06/: main.c
examples/bench_07/: main.c
examples/bench_08/: main.c
examples/bench_09/: main.c
examples/bench_1/: main.c  main_16.c  main_16k.c
examples/bench_10/: main.c
examples/bench_11/: main.c
examples/bench_12/: main.c
examples/bench_13/: main.c
examples/bench_14/: amy.c  bob.c
examples/bench_16/: main.c
examples/bench_17/: main.c
examples/bench_18/: main.c
examples/bench_19/: main.c
examples/bench_2/: main_16.c  main_16k.c
examples/bench_20/: main.c
examples/bench_21/: main.c
examples/bench_22/: main.c
examples/bench_23/: main.c
examples/bench_24/: main.c
examples/bench_25/: main.c
examples/bench_26/: main.c
examples/bench_27/: main.c
examples/bench_28/: main.c
examples/bench_29/: main.c
examples/bench_3/: getter.c  putter.c
examples/bench_30/: main.c
examples/bench_4/: main.c
examples/bench_5/: main.c
examples/bench_8/: main.c
examples/incr_1/: amy.c
examples/incr_2/: amy.c
examples/incr_3/: amy.c
examples/incr_4/: amy.c
examples/incr_5/: amy.c
examples/incr_6/: amy.c
examples/incr_7/: amy.c
examples/incr_8/: amy.c
examples/incr_9/: amy.c
examples/interop_1_socket/: main.c
examples/interop_2_pseudo_socket/: main.c
examples/interop_3_connector/: main.c
examples/interop_connector/: main.c
examples/interop_pseudo_socket/: main.c
examples/interop_socket/: main.c
examples/pres_1/: amy.c  bob.c
examples/pres_2/: bob.c
examples/pres_3/: amy.c  bob.c
examples/pres_4/: bob.c
examples/pres_5/: amy.c  bob.c
src/: common.rs  lib.rs  macros.rs
src/collections/: mod.rs  scoped_buffer.rs  sets.rs  string_pool.rs
src/ffi/: mod.rs  pseudo_socket_api.rs  socket_api.rs
src/protocol/: arena.rs  ast.rs  ast_printer.rs  containers.rs  eval.rs  eval_old.rs  input_source.rs  input_source2.rs  inputsource.rs  lexer.rs  lexer2.rs  library.rs  mod.rs  parser.rs  pools.rs
src/protocol/eval/: error.rs  executor.rs  mod.rs  store.rs  value.rs
src/protocol/parser/: depth_visitor.rs  functions.rs  mod.rs  pass_definitions.rs  pass_imports.rs  pass_symbols.rs  pass_tokenizer.rs  pass_typing.rs  pass_validation_linking.rs  shallow_visitor.rs  symbol_table.rs  symbol_table2.rs  (+9 more)
src/runtime/: actors.rs  communication.rs  endpoints.rs  error.rs  errors.rs  ffi.rs  logging.rs  mod.rs  my_tests.rs  setup.rs  setup2.rs  tests.rs  v2.rs
(+32 files in other folders)
