[package]
name = "reowolf_rs"
version = "0.1.3"
authors = [
	"Christopher Esterhuyse <esterhuy@cwi.nl, christopher.esterhuyse@gmail.com>",
	"Hans-Dieter Hiep <hdh@cwi.nl>"
]
edition = "2018"

[dependencies]
# convenience macros
maplit = "1.0.2"
derive_more = "0.99.2"

# runtime
bincode = "1.2.1"
serde = { version = "1.0.112", features = ["derive"] }
getrandom = "0.1.14" # tiny crate. used to guess controller-id
take_mut = "0.2.2"
indexmap = "1.3.0" # hashsets/hashmaps with efficient arbitrary element removal
replace_with = "0.1.5"

# network
integer-encoding = "1.0.7"
byteorder = "1.3.2"
# mio = "0.6.21"
mio-extras = "2.0.6"
mio = { version = "0.7.0", package = "mio", features = ["tcp", "os-poll"] }

# protocol
# id-arena = "2.2.1"
backtrace = "0.3"

[dev-dependencies]
test-generator = "0.3.0"
crossbeam-utils = "0.7.0"
lazy_static = "1.4.0"

[lib]
# compile target: dynamically linked library using C ABI
crate-type = ["cdylib"]

[features]
default = ["ffi"]
ffi = [] # no feature dependencies