[package]
name = "reowolf_rs"
version = "0.1.4"
authors = [
	"Christopher Esterhuyse <esterhuy@cwi.nl, christopher.esterhuyse@gmail.com>",
	"Hans-Dieter Hiep <hdh@cwi.nl>"
]
edition = "2018"

[dependencies]
# convenience macros
maplit = "1.0.2"
derive_more = "0.99.2"

# runtime
bincode = "1.3.1"
serde = { version = "1.0.114", features = ["derive"] }
getrandom = "0.1.14" # tiny crate. used to guess controller-id

# network
# integer-encoding = "1.1.5"
# byteorder = "1.3.4"
mio = { version = "0.7.0", package = "mio", features = ["tcp", "os-poll"] }

# protocol
backtrace = "0.3"

[dev-dependencies]
# test-generator = "0.3.0"
crossbeam-utils = "0.7.2"
lazy_static = "1.4.0"

[lib]
# compile target: dynamically linked library using C ABI
crate-type = ["cdylib"]

[features]
default = ["ffi"]
ffi = [] # no feature dependencies
endpoint_logging = [] # see src/macros where a conditional check include endpoint logging