[package]
name = "reowolf_rs"
version = "0.1.4"
authors = [
	"Christopher Esterhuyse <esterhuy@cwi.nl, christopher.esterhuyse@gmail.com>",
	"Hans-Dieter Hiep <hdh@cwi.nl>"
]
edition = "2018"

[dependencies]
# convenience macros
maplit = "1.0.2"
derive_more = "0.99.2"

# runtime
bincode = "1.3.1"
serde = { version = "1.0.114", features = ["derive"] }
getrandom = "0.1.14" # tiny crate. used to guess controller-id

# network
mio = { version = "0.7.0", package = "mio", features = ["udp", "tcp", "os-poll"] }
socket2 = { version = "0.3.12", optional = true }

# protocol
backtrace = "0.3"
lazy_static = "1.4.0"

# socket ffi
atomic_refcell = { version = "0.1.6", optional = true }

[dev-dependencies]
# test-generator = "0.3.0"
crossbeam-utils = "0.7.2"
lazy_static = "1.4.0"

[lib]
# compile target: dynamically linked library using C ABI
crate-type = ["cdylib"]

[features]
default = ["ffi", "ffi_socket_api"] # // "session_optimization", 
ffi = [] # see src/ffi.rs
ffi_socket_api = ["ffi", "atomic_refcell", "socket2"]
endpoint_logging = [] # see src/macros.rs
session_optimization = [] # see src/runtime/setup.rs